# tree-sitter-ahoy

./: .gitignore  Cargo.toml  FINAL_SUMMARY.md  INSTALLATION_COMPLETE.txt  Makefile  QUICKSTART.md  README.md  SETUP_GUIDE.md  STATUS.md  SUMMARY.md  auto_update.sh  binding.gyp  build_with_ahoy.sh  grammar.js  package.json  test_integration.sh  test_outline.ahoy  tree-sitter.json  update_from_parser.sh
bindings/c/: tree-sitter-ahoy.h  tree-sitter-ahoy.pc.in
bindings/node/: binding.cc  index.js
bindings/rust/: build.rs  lib.rs
queries/: brackets.scm  highlights.scm  indents.scm  injections.scm  locals.scm  outline.scm  outlines.scm  tags.scm
src/: ahoy_tokenizer_wrapper.go  go.mod  grammar.json  libahoy_tokenizer.h  node-types.json  parser.c  scanner.cc
test/corpus/: basics.txt
