[package]
name = "tree-sitter-ahoy"
description = "Ahoy grammar for the tree-sitter parsing library"
version = "0.1.0"
keywords = ["incremental", "parsing", "ahoy"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/ahoy-lang/ahoy"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20"

[build-dependencies]
cc = "1.0"
